--- a/vagasapp/src/pages/usuario/styles.css
+++ b/vagasapp/src/pages/usuario/styles.css
@@ -1,9 +1,10 @@
 .userInfo{
-  height: 100vh; /* Magic here */
+  margin-top: 50px;
+ text-align: center;
   display: absolute;
   justify-content: center;
   align-items: center;
-  margin-left: 20px;
+  
 }
 
 .userInfo h1 {
@@ -13,4 +14,9 @@
 
 .userInfo p {
     color: rgb(5, 5, 5);   
+}
+
+.cardName{
+    font-size: 30px;
+    font-weight: bold;
 }
